feat: add json csv page and related scripts

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,5 +23,8 @@ main:
   - title: "CV"
     url: /cv/
     
+  - title: "JSON CV"
+    url: /cv-json/
+    
   - title: "Guide"
     url: /markdown/
