checking to make sure edits were saved

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+ # - title: "Talks"
+ #   url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
@@ -24,10 +24,10 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/G_Tully_CV%20.pdf
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
