--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /files/G_Tully_CV%20.pdf
+    url: /files/G_Tully_CV.pdf
     
   # - title: "CV"
   #   url: /cv-json/
